[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
reqwest = { version = "0.12", features = ["json"]}
chrono = { version = "0.4.23", features = ["serde"] }   #时间日期库，用来处理date
serde = { version = "1.0.152", features = ["derive"] }  #序列化库，处理json
serde_json = "1.0.91"   #反序列化json